# rust_laboratory_works_kpi

./: .gitignore  README.md
calculator/: Cargo.toml
calculator/src/: main.rs
calculator/ui/: app-window.slint
chat/: .gitignore  Cargo.toml
chat/src/: auth.rs  controller.rs  main.rs  model.rs  ws.rs  ws_handler.rs
chat/src/public/: chat.html  chat.js  index.html  login.html  login.js  register.html  register.js  style.css
chat/src/static/: chat.html  chat.js  index.html  login.html  login.js  register.html  register.js  script.js  style.css
todo-list/: Cargo.toml
todo-list/src/: functions_lib.rs  lib.rs  main.rs  todo_item.rs
todo-list/ui/: app-window.slint  global.slint
todo-list/ui/components/: form-panel.slint  item-panel.slint  list-item-panel.slint
