[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
firebase-auth-sdk = "0.1.0"
# tokio = {version = "1.37.0", features = ["full"]}
# tower-http = { version = "0.3.5", features = ["cors"] }
# axum = "0.7.5"
jsonwebtoken = "9.2.0"
serde = {version = "1.0.201", features = ["derive"]}
serde_json = "1.0"
axum = { version = "0.6", features = ["ws"] }        # or the latest 0.6.x
tower = "0.4"         # needed by axum/tower-http
tower-http = { version = "0.3", features = ["cors"] }  
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"