[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# slint = "1.0.0"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
chrono = "0.4.37"
resolve-path = "0.1.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
slint = "1.5.1"
rfd = "0.12" 


[build-dependencies]
# slint-build = "1.0.0"
slint-build = "1.5.1"

[lib]
name = "lib"
path = "src/lib.rs"


